--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - '*'
-    
+  workflow_dispatch:
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
 #
