--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ env:
   AZURE_WEBAPP_NAME: acs-web    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: './Calling'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1.301'           # set this to the dot net version to use
-
+  CI: false
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -40,8 +40,8 @@ jobs:
         working-directory: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
         run: |
           dotnet restore
-          dotnet build --configuration Release
-          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
+          dotnet build --configuration Release --no-restore
+          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' --no-restore
           
       # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'
